# boilerplate-ml-pipeline

./: .gitignore  README.md  pyproject.toml
alfred/: run.py
training_pipeline/: pipeline_context.py  run.py
training_pipeline/steps/: base_step.py  clean_data_step.py  fetch_data_step.py  prepare_data_step.py  train_data_step.py
